<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="loginViewModel"
            type="com.rounak.testapp.ui.login.LoginViewModel" />
    </data>

    <ScrollView
        android:id="@+id/loginFragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context="com.rounak.testapp.ui.login.LoginFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            >


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:errorEnabled="true"
                app:errorIconDrawable="@null"
                app:helperText="Enter your email"
                app:helperTextEnabled="true"
                app:layout_constraintWidth_max="400dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.3"
                app:startIconDrawable="@drawable/ic_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputEmail"
                    android:textColor="@color/black"
                    android:imeOptions="actionNext"
                    android:text="@={loginViewModel.inputEmail}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pwdInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:errorEnabled="true"
                app:errorIconDrawable="@null"
                app:helperText="Enter your password"
                app:helperTextEnabled="true"
                app:layout_constraintWidth_max="400dp"
                app:layout_constraintTop_toBottomOf="@+id/emailInputLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/ic_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputPassword"
                    android:textColor="@color/black"
                    android:imeOptions="actionDone"
                    android:text="@={loginViewModel.inputPwd}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/loginButton"
                app:layout_constraintWidth_max="400dp"
                app:layout_constraintTop_toBottomOf="@+id/pwdInputLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                />

            <CheckBox
                android:id="@+id/rememberCheckBox"
                app:layout_constraintStart_toStartOf="@+id/pwdInputLayout"
                app:layout_constraintTop_toBottomOf="@+id/loginButton"
                android:layout_marginTop="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/remember"/>

        </androidx.constraintlayout.widget.ConstraintLayout>



    </ScrollView>
</layout>